--- a/src/Components/Shared/Header/Header.css
+++ b/src/Components/Shared/Header/Header.css
@@ -15,6 +15,7 @@
   align-items: center;
   padding: 7px 0;
   width: 100%;
+  -webkit-backdrop-filter: (5px);
   backdrop-filter: blur(5px);
   transition: 0.5s ease-in-out;
   z-index: 100;
