--- a/src/Components/Home/About/About.css
+++ b/src/Components/Home/About/About.css
@@ -1,5 +1,9 @@
+.about-section {
+  overflow-x: hidden;
+}
 .about-container {
   border-top: 2px solid #1b1d20;
+  overflow: hidden;
 }
 .about-img {
   height: auto;
