--- a/src/Components/Home/About/About.css
+++ b/src/Components/Home/About/About.css
@@ -37,21 +37,16 @@
   font-size: 16px;
   line-height: 26px;
 }
-.all-btn {
-  border: none;
-  outline: none;
-  background: none;
-  color: #f9004d;
-  font-weight: 300;
-  font-size: 16px;
-  letter-spacing: 1px;
-  cursor: pointer;
-  padding: 12px 30px;
-  transition: 0.5s ease-in-out;
-  box-shadow: 10px 10px 19px #131314, -10px -10px 19px #1f2124;
+.all-btn a {
+  padding: 15px;
+  box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
+  color: #f9004d !important;
   border-radius: 5px;
+  transition: 0.5s ease-in-out !important;
+  text-decoration: none;
 }
-.all-btn:hover {
+.all-btn:hover a {
+  color: #fff !important;
   background: linear-gradient(to right bottom, #222325, #16181c);
   transform: translatey(-3px);
 }
