--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -1,11 +1,11 @@
 .banner {
   width: 100%;
-  height: 100vh;
+  height: auto;
   background: #212428;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .banner-heading h4 {
   color: #878f99;
@@ -25,6 +25,12 @@
 }
 .banner-heading h2 span {
   color: #ff014f !important;
+}
+.banner-res {
+  display: none;
+  text-align: center;
+  overflow: hidden;
+  margin: 0 auto;
 }
 .banner-heading h3 {
   font-size: 40px;
@@ -101,7 +107,37 @@
   align-items: center;
   text-align: center;
 }
+.banner-img {
+  display: block;
+}
 .banner-user-icon i {
   color: #fff;
   font-size: 20px;
+}
+@media (min-width: 478px) and (max-width: 680px) {
+  .banner-heading h2 {
+    font-size: 30px;
+  }
+  .banner-heading h3 {
+    font-size: 35px;
+  }
+}
+@media (min-width: 200px) and (max-width: 477px) {
+  .banner-heading h2 {
+    font-size: 20px;
+  }
+  .banner-heading h3 {
+    font-size: 25px;
+  }
+  .banner-heading p {
+    font-size: 14px;
+  }
+}
+@media (min-width: 228px) and (max-width: 768px) {
+  .banner-img {
+    display: none;
+  }
+  .banner-res {
+    display: block;
+  }
 }
