--- a/src/Components/Home/Services/Services.css
+++ b/src/Components/Home/Services/Services.css
@@ -47,12 +47,12 @@
 }
 .prev {
   bottom: -4%;
-  left: 48%;
+  left: 45%;
   z-index: 10;
 }
 .next {
   bottom: -4%;
-  right: 47%;
+  right: 45%;
   z-index: 10;
 }
 .arrows-bg {
@@ -73,4 +73,17 @@
 }
 .services-container {
   padding: 30px;
+}
+
+@media (min-width: 200px) and (max-width: 518px) {
+  .prev {
+    bottom: -4%;
+    left: 40%;
+    z-index: 10;
+  }
+  .next {
+    bottom: -4%;
+    right: 40%;
+    z-index: 10;
+  }
 }
