--- a/src/Components/Shared/Header/Header.css
+++ b/src/Components/Shared/Header/Header.css
@@ -43,6 +43,7 @@
   letter-spacing: 1px;
 }
 /* nav part start */
+.nav-menu2 a,
 .nav-menu a {
   text-decoration: none;
   margin-left: 30px;
@@ -50,6 +51,13 @@
   font-size: 18px;
   font-weight: 400;
 }
+.resume2 {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 400;
+  display: none;
+}
+.resume2,
 .resume {
   /* background: linear-gradient(to right bottom, #212428, #16181c); */
   padding: 15px;
@@ -58,7 +66,67 @@
   border-radius: 5px;
   transition: 0.5s ease-in-out !important;
 }
+.resume2:hover,
 .resume:hover {
   background: linear-gradient(to right bottom, #222325, #16181c);
   transform: translatey(-10px) !important;
+}
+.header-bars {
+  display: none;
+  color: #f9004d;
+  font-size: 30px;
+  font-weight: 600;
+  cursor: pointer;
+  z-index: 99999;
+}
+@media (min-width: 228px) and (max-width: 768px) {
+  .resume2 {
+    display: block;
+    margin-left: 47%;
+  }
+  .resume {
+    display: none !important;
+  }
+  .header-bars {
+    display: block;
+  }
+
+  .nav-menu2 {
+    width: 100%;
+    margin-left: 0%;
+    background: #212428;
+    text-align: center;
+    margin-top: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 100vh;
+    transition: 0.5s ease-in-out;
+  }
+  .nav-menu {
+    width: 100%;
+    margin-left: -100%;
+    background: #7b7b7efb;
+    text-align: center;
+    margin-top: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 100vh;
+    transition: 0.5s ease-in-out;
+  }
+  .nav-menu2 a,
+  .nav-menu a {
+    display: flex;
+    flex-direction: column;
+    color: #f8faff;
+    margin-top: 10px;
+  }
+}
+@media (min-width: 228px) and (max-width: 568px) {
+  .resume2 {
+    margin-left: 0%;
+  }
 }
